[SYNCOPE-1427] Adjusting some conf and docs