@@ -2031,7 +2031,7 @@ under the License.
                 <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
                 <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
 
-                <cargo.jvmargs>-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Xmx1024m -Xms512m</cargo.jvmargs>
+                <cargo.jvmargs>-XX:+CMSClassUnloadingEnabled -Xmx1024m -Xms512m</cargo.jvmargs>
               </properties>
             </configuration>
           </configuration>
